--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "bai 1",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect index.js",
+    "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +22,10 @@
   "homepage": "https://github.com/lazymaxboy/nodejs_blog#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^5.1.0",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
