--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   "homepage": "https://github.com/lazymaxboy/nodejs_blog#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^5.1.0",
-    "nodemon": "^2.0.20"
+    "express-handlebars": "^5.1.0"
   },
   "devDependencies": {
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-sass": "^8.0.0",
+    "nodemon": "^2.0.20"
   }
 }
