--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^5.1.0",
+    "method-override": "^3.0.0",
     "mongoose": "^6.9.0",
     "mongoose-delete": "^0.5.4",
-    "mongoose-slug-generator": "^1.0.4",
-    "method-override": "^3.0.0"
+    "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
     "husky": "^8.0.3",
