--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.9.27",
     "mongoose-delete": "^0.5.2",
+    "mongoose-sequence": "^5.3.1",
     "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
